# snowconn

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config-example.ini  pyproject.toml  requirements.txt  setup.py  test.py
.circleci/: config.yml
.github/workflows/: publish.yaml
snconn/: __init__.py  connect.py
snowconn/: __init__.py  connect.py  connection_builder.py
test/: README.md
tests/: conftest.py  test_connection_builder.py
